<resources>
    <string name="app_name">"Lab2.1 Loan Calculator"</string>
    <string name="vehicle_price">Vehicle price</string>
    <string name="downpayment">Downpayment</string>
    <string name="repayment">Repayment (monthly)</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="salary">Salary (monthly)</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="status">Status</string>
    <string name="close">Close</string>

</resources>
